Issue #3263226: Dropbutton looks inconsistent on mobile

--- a/styles/base/_dropbutton.scss
+++ b/styles/base/_dropbutton.scss
@@ -159,6 +159,7 @@
     > a,
     > input,
     > .button {
+      font-size: .875rem;
       padding: .75em 1em !important;
     }
   }
